added the header for services online.. also added content to the section of the advanced search page that should be replaced when creating a new page

--- a/clickthru/css/skins/mixed-flat-colors.css
+++ b/clickthru/css/skins/mixed-flat-colors.css
@@ -21,7 +21,7 @@
 }
 
 .navigation > li > a, .navigation > li > a > i, .sticky-navigation .navigation > a {
-    color: #c1c1c1;
+  color: #fff;
 }
 
 .navigation > li:hover > a,
