Fixed header link issues

--- a/clickthru/css/style.css
+++ b/clickthru/css/style.css
@@ -6418,6 +6418,9 @@ Navigation
     padding-right: 12px;
 }
 
+/*.in-menu{
+    margin-top: 10px;
+}*/
 .in-menu > li > a:hover, .in-menu > li > a:focus{
     background: none;
 }
